deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: notes-app
        image: "${DOCKER_HUB_USER}/notes-app:latest"  # Updated by Jenkins
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
